@@ -66,10 +66,11 @@
             It was written as part of Google's 2007 Summer of Code lead by
             <a href="http://home.cs.tum.edu/~siegel">daniel g. siegel</a> and
             mentored by <a href="http://raphael.slinckx.net">Raphaël
-              Slinckx</a>, and has most
-            of the classical photo booth features after a bare couple of months of
-            development. Under the hood, Cheese uses GStreamer to apply fancy
-            effects to photos and videos.  After a success of the Summer
+              Slinckx</a>
+            Under the hood, Cheese uses GStreamer to apply fancy
+            effects to photos and videos. With Cheese it is easy to take photos
+            of you, your friends, pets or whatever you want and share them with
+            others. After a success of the Summer
             of Code, the development continued and we still are looking for
             people with nice ideas and patches ;)
             </p>
@@ -113,6 +114,7 @@
             Schwarzenegger? Do you want to complain, because there is no
             filter, which simulates an ice-cream? Join our
             <a href="http://mail.gnome.org/mailman/listinfo/cheese-list">mailing list</a>
+            (You have to join the list to send mails to it)
             </p>
 
             <h2>Press and User Reactions</h2>
@@ -120,12 +122,11 @@
             <ul>
               <li><a target="_blank" href="http://arstechnica.com/journals/linux.ars/2007/08/21/cheese-brings-photoboth-functionality-to-linux">ArsTechnica Review</a></li>
               <li><a target="_blank" href="http://www.gnomejournal.org/article/60/an-interview-with-daniel-g-siegel">GnomeJournal Interview with daniel g. siegel</a></li>
-              <li><a target="_blank" href="http://desdeamericaconamor.org/blog/node/383">Quim Gil on Cheese</a></li>
+              <li><a target="_blank" href="http://ubuntuforums.org/showthread.php?t=486722">Cheese HowTo in the Ubuntu Forums</a></li>
             </ul>
             </div>
             <div style="width: 49%; float: left;">
             <ul>
-              <li><a target="_blank" href="http://ubuntuforums.org/showthread.php?t=486722">Cheese HowTo in the Ubuntu Forums</a></li>
               <li><a target="_blank" href="http://www.phoronix.com/scan.php?page=article&amp;item=980&amp;num=2">Phoronix Article about Improvements in GNOME 2.22</a></li>
               <li><a target="_blank" href="http://tombuntu.com/index.php/2007/09/19/cheesy-photo-booth-like-app-for-gnome/">Tombuntu Article about Cheese</a></li>
             </ul>
