@@ -1,3 +1,8 @@
+2008-08-16  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/index.html: 
+	  small updates on the cheese page
+
 2008-08-05  daniel g. siegel <dgsiegel@gmail.com>
 
 	* www.gnome.org/projects/cheese/download.html,
